[package]
name = "bridge"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.6"
console_log = "0.2.0"
log = "0.4.14"
rand = { version = "0.8.4", default-features = false }
rand_chacha = "0.3.1"
rand_core = "0.6.3"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
wasm-bindgen = "0.2.78"
